--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
   <head>
     <%= stylesheet_link_tag :all, :cache => true %>
     <%= javascript_include_tag :defaults, :juggernaut %>
-    <%= juggernaut :host => "towerdefence.local", :debug => false %>
+    <%= juggernaut :host => request.host, :debug => false %>
   </head>
   <body>
       <%= yield %>
