--- a/app/views/games/login.html.erb
+++ b/app/views/games/login.html.erb
@@ -1,9 +1,29 @@
-<div>
-  <% form_tag(:action => 'take_login') do %>
-    <p>Choose a username: <br />
-      <input type="text" name="username" value="" id="username" />
-    </p>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-    <p><input type="submit" value="Continue &rarr;"></p>
-  <% end %>
-</div>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
+	<title>Tower Defense Login</title>
+	<link rel="stylesheet" href="/stylesheets/application.css" type="text/css" media="screen" title="no title" charset="utf-8" />
+	
+</head>
+
+<body>
+  <h1>Tower Defense Login</h1>
+  <div id="login">
+    <div id="errors">
+      <%=h flash[:error] %>
+    </div>
+    
+    <% form_tag(:action => 'take_login') do %>
+      <p>Choose a username: <br />
+        <input type="text" name="username" value="" id="username" />
+      </p>
+
+      <p><input type="submit" value="Continue &rarr;"></p>
+    <% end %>
+  </div>
+</body>
+</html>
