--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,4 +1,55 @@
-#chat_data { height:200px;overflow-y:scroll;border:1px solid black;}
-#chat_data .message {border-bottom:1px solid #C8C8C8;display:block;}
-#chat_data .message .username {width:50px; font-weight:bold;margin-right:5px;}
-#chat_data .notice {display:block;font-style: italic;}
+/* @override 
+	http://towerdefense.local/stylesheets/application.css
+	http://towerdefense.local/stylesheets/application.css?1221562259
+*/
+
+#main {
+	height: 300px;
+	border: 1px solid black;
+	border-bottom: none;
+}
+
+#wrap {
+	width: 80%;
+	float: left;
+}
+#user_list {
+	width: 18%;
+	float: left;
+	height: 441;
+	padding: 5px;
+	border: 1px solid black;
+	border-left: none;
+}
+
+#text_input {
+	height: 50px;
+}
+
+#text_input input {
+	width: 10%;
+}
+
+#text_input input#chat_input {
+	width: 89%;
+}
+
+#messages { height:150px;overflow-y:scroll;border:1px solid black;}
+#messages .message {border-bottom:1px solid #C8C8C8;display:block;}
+#messages .message .username {width:50px; font-weight:bold;margin-right:5px;}
+#messages .notice {display:block;font-style: italic;}
+
+
+/* Login Page */
+h1 {
+	text-align: center;
+}
+
+#login {
+	margin-top: 120px;
+	background-color: lightgrey;
+	width: 280px;
+	height: 170px;
+	margin:auto;
+	padding: 20px;
+}
