added Pete's path finder swf as a placeholder for game

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,1 +1,12 @@
-Game SWF will go here
+<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" height="100%" id="grid_v4" align="middle">
+  <param name="allowScriptAccess" value="sameDomain" />
+  <param name="allowFullScreen" value="false" />
+  <param name="movie" value="/concept/grid_v4.swf" />
+  <param name="quality" value="high" />
+  <param name="bgcolor" value="#000000" />	
+  <embed src="/concept/grid_v4.swf" quality="high" bgcolor="#000000" 
+    height="100%" name="grid_v4" align="middle" 
+    allowScriptAccess="sameDomain" allowFullScreen="false" 
+    type="application/x-shockwave-flash" 
+    pluginspage="http://www.macromedia.com/go/getflashplayer" />
+</object>
