--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,8 @@
     </div>
 
     <div id="user_list">
-      <% User.active do |u| %>
-        <%= u.username %><br />
+      <% User.active.each do |u| %>
+        <span style="color:#<%= u.colour %>"><%= u.username %></span><br />
       <% end %>
     </div>
       
