Added link to GitHub sourcecode on site

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,6 @@
     </div>
       
       
-    <p><a href="/concept/index.html">Flash Concept</a></p>
+    <p><a href="http://github.com/bjeanes/towerdefense">Source Code and Changelog</a></p>
   </body>
 </html>
