--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,8 +1,12 @@
-<div id="chat_data"></div>
-
-<%= form_remote_tag(
-      :url => { :action => :send_data },
-      :complete => "$('chat_input').value = ''" ) %>
-  <%= text_field_tag( 'chat_input', '', { :size => 20, :id => 'chat_input'} ) %>
-  <%= submit_tag "Send" %>
-</form>
+<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" width="100%" height="100%" id="index" align="middle">
+  <param name="allowScriptAccess" value="sameDomain" />
+  <param name="allowFullScreen" value="false" />
+  <param name="movie" value="/concept/index.swf" />
+  <param name="quality" value="high" />
+  <param name="bgcolor" value="#000000" />	
+  <embed src="/concept/index.swf" quality="high" bgcolor="#000000" 
+    width="100%" height="100%" name="index" align="middle" 
+    allowScriptAccess="sameDomain" allowFullScreen="false" 
+    type="application/x-shockwave-flash" 
+    pluginspage="http://www.macromedia.com/go/getflashplayer" />
+</object>
