--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Sign up as a new user</h1>
+<h1>Create an Account</h1>
 <% @user.password = @user.password_confirmation = nil %>
 
 <%= error_messages_for :user %>
@@ -6,14 +6,11 @@
 <p><%= label_tag 'login' %><br/>
 <%= f.text_field :login %></p>
 
-<p><%= label_tag 'email' %><br/>
-<%= f.text_field :email %></p>
-
 <p><%= label_tag 'password' %><br/>
 <%= f.password_field :password %></p>
 
 <p><%= label_tag 'password_confirmation', 'Confirm Password' %><br/>
 <%= f.password_field :password_confirmation %></p>
 
-<p><%= submit_tag 'Sign up' %></p>
+<p><%= submit_tag 'Create Account' %></p>
 <% end -%>
