--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -24,8 +24,8 @@
     <%= f.check_box :sent %>
   </p>
   <p>
-    <%= f.label :type %><br />
-    <%= f.text_field :type %>
+    <%= f.label :kind %><br />
+    <%= f.text_field :kind %>
   </p>
   <p>
     <%= f.submit "Update" %>
