Lobby Chat working, including error correction (sends back error only to sender, not to all users). Users subscribe to lobby and messages sent to lobby will only go to users in lobby

--- a/app/views/lobby/index.html.erb
+++ b/app/views/lobby/index.html.erb
@@ -11,9 +11,7 @@
   <body>
     <div id="chat">
       <div id="messages">
-        <% @messages.each do |message| %>
-          <div><span><%= message.sender.login %></span> <%= message.content %></div>
-        <% end %>
+        <%= render :partial => 'messages/message', :collection => @messages %>
       </div>
       <div id="text_input">
         <%= form_remote_tag(
