Check if client is in channel before saving/sending the message and put old messages that show up in log in their own div so they can be styled differently (i.e. history/log)

--- a/app/views/lobby/index.html.erb
+++ b/app/views/lobby/index.html.erb
@@ -11,7 +11,9 @@
   <body>
     <div id="chat">
       <div id="messages">
-        <%= render :partial => 'messages/message', :collection => @messages %>
+        <div class="history">
+          <%= render :partial => 'messages/message', :collection => @messages %>
+        </div>
       </div>
       <div id="text_input">
         <%= form_remote_tag(
