Added some basic styling for messages

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,1 +1,7 @@
-<div class="message"><span class="sender"><%= message.sender.login %></span>: <%= message.content %></div>
+<div class="message">
+  <span class="sender" style="color:#<%= message.sender.colour %>">
+    <%= message.sender.login %>
+  </span>: 
+  
+  <%= message.content %>
+</div>
