--- a/app/views/lobby/index.html.erb
+++ b/app/views/lobby/index.html.erb
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <%= stylesheet_link_tag :all, :cache => true %>
+    <%= stylesheet_link_tag :all %>
     <%= javascript_include_tag :defaults, :juggernaut %>
     <%= juggernaut \
           :debug => false,
@@ -8,11 +8,14 @@
           :client_id => current_user.id,
           :channels => ['lobby'] %>
   </head>
-  <body>
+  <body id="lobby">
     <div id="chat">
       <div id="messages">
         <div class="history">
           <%= render :partial => 'messages/message', :collection => @messages %>
+          <div class="marker">
+            &#x2191; HISTORY &#x2191;
+          </div>
         </div>
       </div>
       <div id="text_input">
@@ -23,6 +26,9 @@
           <%= hidden_field_tag 'message[kind]', 'lobby', {:id => 'message_kind'}%>
           <%= submit_tag "Send" %>
         </form>
+      </div>
+      <div id="users">
+        
       </div>
     </div>
   </body>
