Starting user list

--- a/app/views/lobby/index.html.erb
+++ b/app/views/lobby/index.html.erb
@@ -28,7 +28,7 @@
         </form>
       </div>
       <div id="users">
-        
+        <%= render :partial => 'user_list', :locals => {:users => User.online} %>
       </div>
     </div>
   </body>
