--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,16 +1,28 @@
-<h1>Create an Account</h1>
-<% @user.password = @user.password_confirmation = nil %>
+<html>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <title>Create an account</title>
+    <%= stylesheet_link_tag :all %>
+  </head>
+  <body id="register">
+    <div class="form">
 
-<%= error_messages_for :user %>
-<% form_for :user, :url => users_path do |f| -%>
-<p><%= label_tag 'login' %><br/>
-<%= f.text_field :login %></p>
+      <h1>Create an Account</h1>
+      <% @user.password = @user.password_confirmation = nil %>
 
-<p><%= label_tag 'password' %><br/>
-<%= f.password_field :password %></p>
+      <%= error_messages_for :user %>
+      <% form_for :user, :url => users_path do |f| -%>
+      <p><%= label_tag 'login' %><br/>
+      <%= f.text_field :login %></p>
 
-<p><%= label_tag 'password_confirmation', 'Confirm Password' %><br/>
-<%= f.password_field :password_confirmation %></p>
+      <p><%= label_tag 'password' %><br/>
+      <%= f.password_field :password %></p>
 
-<p><%= submit_tag 'Create Account' %></p>
-<% end -%>
+      <p><%= label_tag 'password_confirmation', 'Confirm Password' %><br/>
+      <%= f.password_field :password_confirmation %></p>
+
+      <p><%= submit_tag 'Create Account' %></p>
+      <% end -%>
+    </div>
+  </body>
+</html>
