--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,8 +1,8 @@
 <div class="message">
   [<%= message.timestamp %>]
   <span class="sender" style="color:#<%= message.sender.colour %>">
-    <%= message.sender %>
+    <%= h(message.sender) %>
   </span>: 
   
-  <%= message.content %>
+  <%= h(message.content) %>
 </div>
