made history arrows a bit nicer

--- a/app/views/lobby/index.html.erb
+++ b/app/views/lobby/index.html.erb
@@ -13,7 +13,7 @@
         <div class="history">
           <%= render :partial => 'messages/message', :collection => @messages %>
           <div class="marker">
-            &#x2191; HISTORY &#x2191;
+            &#x21E7; HISTORY &#x21E7;
           </div>
         </div>
       </div>
@@ -28,7 +28,7 @@
         </form>
         
         <div id="chat_status">
-          
+          Disconnected.
         </div>
       </div>
     </div>
