Abstracted Messsage history fetching to model using named_scope, copied lobby view file for game window to start with, and added titles to both layouts

--- a/app/views/game/index.html.erb
+++ b/app/views/game/index.html.erb
@@ -5,8 +5,8 @@
     <%= juggernaut \
           :host => request.host, 
           :client_id => current_user.id,
-          :channels => ['lobby'] %>
-    <title>Tower Defense Lobby</title>
+          :channels => [@game.id] %>
+    <title>Tower Defense Game: <%= @game.name %></title>
   </head>
   <body id="lobby">
     <div id="chat">
