fixed body id in game index

--- a/app/views/game/index.html.erb
+++ b/app/views/game/index.html.erb
@@ -8,7 +8,7 @@
           :channels => [@game.id] %>
     <title>Tower Defense Game: <%= @game.name %></title>
   </head>
-  <body id="lobby">
+  <body id="game">
     <div id="chat">
       <div id="messages">
         <div class="history">
