Moved user_list partial into a shared template folder and made current_game return the first active OR open game it finds

--- a/app/views/lobby/index.html.erb
+++ b/app/views/lobby/index.html.erb
@@ -44,7 +44,7 @@
       </div>
     </div>
     <div id="users">
-      <%= render :partial => 'user_list', :locals => {:users => User.online} %>
+      <%= render :partial => 'shared/user_list', :locals => {:users => User.online} %>
     </div>
   </body>
 </html>
