--- a/app/views/game/index.html.erb
+++ b/app/views/game/index.html.erb
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div id="users">
-      <%= render :partial => 'game/user_list', :locals => {:users => User.online} %>
+      <%= render :partial => 'shared/user_list', :locals => {:users => User.online} %>
     </div>
   </body>
 </html>
