--- a/app/views/game/index.html.erb
+++ b/app/views/game/index.html.erb
@@ -9,6 +9,19 @@
     <title>Tower Defense Game: <%= @game.name %></title>
   </head>
   <body id="game">
+    <div id="swf">
+      <object codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" width="75%" height="500"
+        classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" id="index" align="middle">
+      	<param name="allowScriptAccess" value="sameDomain" />
+      	<param name="allowFullScreen" value="false" />
+      	<param name="movie" value="/index.swf" />
+      	<param name="quality" value="high" />
+      	<param name="bgcolor" value="#000000" />
+      	<embed src="/index.swf" quality="high" bgcolor="#000000" width="75%" height="500"
+      	  name="index" align="middle" allowScriptAccess="sameDomain" allowFullScreen="false" 
+      	  type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" />
+    	</object>
+    </div>
     <div id="chat">
       <div id="messages">
         <div class="history">
