--- a/app/views/shared/_user_list.html.erb
+++ b/app/views/shared/_user_list.html.erb
@@ -1,3 +1,3 @@
 <% users.each do |user| %>
-  <span style="color:#<%= user.colour %>"><%= user %></span>
+  <span style="color:#<%= user.colour %>"><%= user %> (lives, gold, income)</span>
 <% end %>
