--- a/app/views/lobby/index.html.erb
+++ b/app/views/lobby/index.html.erb
@@ -1,7 +1,7 @@
 <html>
   <head>
     <%= stylesheet_link_tag :all %>
-    <%= javascript_include_tag :defaults, :juggernaut, 'chat' %>
+    <%= javascript_include_tag :defaults, :juggernaut %>
     <%= juggernaut \
           :host => request.host, 
           :client_id => current_user.id,
