--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,9 +1,15 @@
 /* @override 
 	http://towerdefense.local/stylesheets/application.css?1223390273
 	http://towerdefense.local/stylesheets/application.css?1223421364
+	http://towerdefense.local/stylesheets/application.css?1224062220
 */
 
-body { background-color: #fff; color: #333; }
+html,body{
+	margin: 0;
+	padding: 0;
+}
+
+body { background-color: #000; color: #333; }
 
 body, p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
@@ -33,6 +39,7 @@ div#chat {
 	border: 1px solid #333;
 	float: left;
 	width: 75%;
+	background: #fff;
 }
 
 div#users {
