Lots of changes. Listed below
* Added current_game controller and helper method to get current game of current user.
* Added untested stub action for starting a game (marking it as no longer open)
* Added next/previous methods to Playership and delegated it on User through current_game.playerships
* Delegated gold,income,lives on User to current_game playership for easy fetching
* Added statistics to user list (should be removed from lobby though)

--- a/app/views/shared/_user_list.html.erb
+++ b/app/views/shared/_user_list.html.erb
@@ -1,3 +1,11 @@
-<% users.each do |user| %>
-  <span style="color:#<%= user.colour %>"><%= user %> (lives, gold, income)</span>
-<% end %>
+<table border="0" cellspacing="0" cellpadding="0">
+  <tr><th>Player</th><th>L</th><th>G</th><th>I</th></tr>
+  <% users.each do |user| %>
+    <tr>
+      <td><span style="color:#<%= user.colour %>"><%= user %></span></td>
+      <td><%= user.lives %></td>
+      <td><%= user.gold %></td>
+      <td><%= user.income %></td>
+    </tr>
+  <% end %>
+</table>
