--- a/app/views/game/index.html.erb
+++ b/app/views/game/index.html.erb
@@ -5,8 +5,8 @@
     <%= juggernaut \
           :host => request.host, 
           :client_id => current_user.id,
-          :channels => [@game.id] %>
-    <title>Tower Defense Game: <%= @game.name %></title>
+          :channels => [current_game.id] %>
+    <title>Tower Defense Game: <%= current_game.name %></title>
   </head>
   <body id="game">
     <div id="swf">
@@ -29,7 +29,7 @@
               { :id => 'message_content', 
                 :disabled => true} %>
           <%= hidden_field_tag 'message[kind]', 'channel', {:id => 'message_kind'}%>
-          <%= hidden_field_tag 'message[channel_id]', @game.id, { :id => 'message_channel' } %>
+          <%= hidden_field_tag 'message[channel_id]', current_game.id, { :id => 'message_channel' } %>
           <%= hidden_field_tag 'authenticity_token', form_authenticity_token %>
           <%= submit_tag "Send", {:id => "message_send", :disabled => true} %>
         </form>
