--- a/app/views/shared/_chat.html.erb
+++ b/app/views/shared/_chat.html.erb
@@ -8,12 +8,11 @@
     </div>
   </div>
   <div id="text_input">
-    <form method="post" action="<%= messages_path %>" id="send_message_form">
+    <form method="post" autocomplete="off" action="<%= messages_path %>" id="send_message_form">
       <%= text_field_tag 'message[content]', '', 
           { :id => 'message_content', 
             :disabled => true} %>
       <%= hidden_field_tag 'message[channel_id]', channel, { :id => 'message_channel' } %>
-      <%#= hidden_field_tag 'authenticity_token', form_authenticity_token %>
       <%= submit_tag "Send", {:id => "message_send", :disabled => true} %>
     </form>
     
